@@ -1,7 +1,7 @@
-// 1.20.1	2023-11-07T20:01:41.195996	Registrate Provider for l2hostility [Recipes, Advancements, Loot Tables, Tags (blocks), Tags (items), Tags (fluids), Tags (entity_types), Blockstates, Item models, Lang (en_us/en_ud), Tags (traits), Patchouli Provider]
+// 1.20.1	2023-11-07T20:29:13.626045	Registrate Provider for l2hostility [Recipes, Advancements, Loot Tables, Tags (blocks), Tags (items), Tags (fluids), Tags (entity_types), Blockstates, Item models, Lang (en_us/en_ud), Tags (traits), Patchouli Provider]
 d70fdb86a9e889383707aa03fd2b7c8f3faa74cc assets/l2hostility/blockstates/hostility_spawner.json
-973ed0497f922541d7b46d3d5f7ae8ef0cd0a2b3 assets/l2hostility/lang/en_ud.json
-b10592963510bc21e897ccd6a7c811713c5f5dd1 assets/l2hostility/lang/en_us.json
+35d17770e2ffd5801a2344e7bb5f774756d2f85c assets/l2hostility/lang/en_ud.json
+46f9d1dd89527ebaca33e2e133a1af17588a0ef8 assets/l2hostility/lang/en_us.json
 55c31fd97776999c18d0f2503db0ab0f48f978ca assets/l2hostility/models/block/hostility_spawner.json
 de5c51bce5800765c4480502c92b16feb891e135 assets/l2hostility/models/block/hostility_spawner_activated.json
 4fc08943953876aaddfa8b72bdf177b446377ce1 assets/l2hostility/models/block/hostility_spawner_clear.json
