@@ -86,6 +86,7 @@
   "item.l2hostility.witch_wand": "Witch Wand",
   "itemGroup.l2library.hostility": "L2Hostility",
   "l2hostility.boss_event": "Hostility Clearing Progress: %s/%s",
+  "l2hostility.command.mob.success": "Performed actions on %s mobs",
   "l2hostility.command.player.fail": "Command has no target or no effect",
   "l2hostility.command.player.get_base": "%s has base difficulty level %s",
   "l2hostility.command.player.get_dim": "%s has visited %s dimensions",
