@@ -97,12 +97,21 @@
   "entity.l2hostility.hostility_bullet": "恶意子弹",
   "entity.l2hostility.hostility_charge": "恶意弹",
   "curios.identifier.hostility_curse": "恶意-诅咒",
+  "l2hostility.command.mob.success": "指令已对%s个怪物起效",
   "l2hostility.command.player.fail": "指令无目标或者无效",
   "l2hostility.command.player.get_base": "%s的基础难度等级位Lv.%s",
   "l2hostility.command.player.get_dim": "%s造访过%s个维度",
   "l2hostility.command.player.get_total": "%s综合难度等级为Lv.%s",
   "l2hostility.command.player.success": "指令已对%s个玩家起效",
   "l2hostility.command.player.trait_cap": "%s击杀的最高阶级词条为阶级%s",
+  "l2hostility.command.region.clear": "子区块难度已净化",
+  "l2hostility.command.region.count": "指令已对%s个子区块起效",
+  "l2hostility.command.region.get_base": "目标子区块的累积难度为%s",
+  "l2hostility.command.region.get_scale": "目标子区块的难度倍率为%s",
+  "l2hostility.command.region.get_total": "目标子区块的总难度为%s",
+  "l2hostility.command.region.local_off": "子区块难度积累已禁用",
+  "l2hostility.command.region.not_clear": "子区块难度还未净化",
+  "l2hostility.command.region.success": "指令已生效",
   "l2hostility.patchouli.title": "莱特兰·恶意-教程与词条列表",
   "l2hostility.patchouli.landing": "这个模组提升了怪物数值，并添加了各种能力",
   "l2hostility.boss_event": "恶意清除进度：%s/%s",
@@ -172,5 +181,45 @@
   "l2hostility.jei.loot_chance": "%3$s阶%2$s词条%1$s概率掉落",
   "l2hostility.jei.loot_title": "恶意词条掉落",
   "l2hostility.jei.min_level": "等级%s及以上的怪物掉落",
-  "l2hostility.jei.other_trait": "同时需要%2$s阶%1$s词条"
+  "l2hostility.jei.other_trait": "同时需要%2$s阶%1$s词条",
+  "advancements.l2hostility.advancements.hostility.breed.description": "使用词条物品赋予怪物词条",
+  "advancements.l2hostility.advancements.hostility.breed.title": "养虎为患",
+  "advancements.l2hostility.advancements.hostility.detector.description": "获得恶意侦测器",
+  "advancements.l2hostility.advancements.hostility.detector.title": "安全指南针",
+  "advancements.l2hostility.advancements.hostility.effect_kill_adaptive.description": "使用剧毒/凋零/燃魂药水效果或者燃烧来对抗适应词条的怪物并将其击杀",
+  "advancements.l2hostility.advancements.hostility.effect_kill_adaptive.title": "适应抑制",
+  "advancements.l2hostility.advancements.hostility.effect_kill_regen.description": "使用诅咒药水效果来对抗再生词条的怪物并将其击杀",
+  "advancements.l2hostility.advancements.hostility.effect_kill_regen.title": "再生抑制",
+  "advancements.l2hostility.advancements.hostility.effect_kill_teleport.description": "使用禁锢药水效果来对抗传送词条的怪物并将其击杀",
+  "advancements.l2hostility.advancements.hostility.effect_kill_teleport.title": "传送抑制",
+  "advancements.l2hostility.advancements.hostility.effect_kill_undead.description": "使用诅咒药水效果来对抗不死词条的怪物并将其击杀",
+  "advancements.l2hostility.advancements.hostility.effect_kill_undead.title": "复活抑制",
+  "advancements.l2hostility.advancements.hostility.envy.description": "获得嫉妒诅咒",
+  "advancements.l2hostility.advancements.hostility.envy.title": "我也想要",
+  "advancements.l2hostility.advancements.hostility.glasses.description": "获得侦测眼镜用于发现隐身的敌人",
+  "advancements.l2hostility.advancements.hostility.glasses.title": "看不见的威胁",
+  "advancements.l2hostility.advancements.hostility.ingot.description": "获得混沌锭",
+  "advancements.l2hostility.advancements.hostility.ingot.title": "潘多拉魔盒",
+  "advancements.l2hostility.advancements.hostility.kill_10_traits.description": "击杀拥有10个词条的怪物",
+  "advancements.l2hostility.advancements.hostility.kill_10_traits.title": "传奇杀戮者",
+  "advancements.l2hostility.advancements.hostility.kill_5_traits.description": "击杀拥有5个词条的怪物",
+  "advancements.l2hostility.advancements.hostility.kill_5_traits.title": "传说之战",
+  "advancements.l2hostility.advancements.hostility.kill_adaptive.description": "击杀保护+重装+再生+适应词条的怪物",
+  "advancements.l2hostility.advancements.hostility.kill_adaptive.title": "破防专家",
+  "advancements.l2hostility.advancements.hostility.kill_dementor.description": "击杀破魔+摄魂词条的怪物",
+  "advancements.l2hostility.advancements.hostility.kill_dementor.title": "免疫破除",
+  "advancements.l2hostility.advancements.hostility.kill_first.description": "击杀一个有词条的怪物",
+  "advancements.l2hostility.advancements.hostility.kill_first.title": "不可忽视的对手",
+  "advancements.l2hostility.advancements.hostility.kill_ragnarok.description": "击杀杀戮光环+诸神黄昏词条的怪物",
+  "advancements.l2hostility.advancements.hostility.kill_ragnarok.title": "最终决战",
+  "advancements.l2hostility.advancements.hostility.kill_tanky.description": "击杀保护+重装词条的怪物",
+  "advancements.l2hostility.advancements.hostility.kill_tanky.title": "开罐头",
+  "advancements.l2hostility.advancements.hostility.patchouli.description": "阅读恶意教程",
+  "advancements.l2hostility.advancements.hostility.patchouli.title": "恶意教程：入门到入土",
+  "advancements.l2hostility.advancements.hostility.root.description": "你的生存指南",
+  "advancements.l2hostility.advancements.hostility.root.title": "感谢使用莱特兰恶意",
+  "advancements.l2hostility.advancements.hostility.sloth.description": "获得怠惰诅咒",
+  "advancements.l2hostility.advancements.hostility.sloth.title": "我想休息一下",
+  "advancements.l2hostility.advancements.hostility.trait.description": "获得一个词条物品",
+  "advancements.l2hostility.advancements.hostility.trait.title": "新世界的大门"
 }
