@@ -1,15 +1,18 @@
+- add config option to determine if death would reduce difficulty when keep inventory is true TODO
+
 2.4.11
 - add 9 curio items
 - add 9 traits
 - add witch droplet, booster potion, witch charge, eternal witch charge
 - mobs at Lv.x will have only x% chance to have traits
+- add region difficulty commands
+- add mob trait commands
 - make fiery trait more lenient
 - Repelling not targeting creative
 - add config to allow exponential health/damage
-- add config to allow disabling orb
+- add config to allow disabling orbs
 - fix ender trait throwing error when teleport distance is 0
 - fix ender trait teleporting to invalid position
-- add config option to determine if death would reduce difficulty when keep inventory is true TODO
 
 2.4.10
 - Fix regen calling potion test every tick
